--- a/package.json
+++ b/package.json
@@ -6,35 +6,37 @@
 	"nativescript": {
 		"id": "com.copaair.copa",
 		"tns-ios": {
-			"version": "3.1.0"
+			"version": "6.4.2"
 		}
 	},
 	"dependencies": {
-		"@angular/animations": "~4.2.0",
-		"@angular/common": "~4.2.0",
-		"@angular/compiler": "~4.2.0",
-		"@angular/core": "~4.2.0",
-		"@angular/forms": "~4.2.0",
-		"@angular/http": "~4.2.0",
-		"@angular/platform-browser": "~4.2.0",
-		"@angular/router": "~4.2.0",
+		"@angular/animations": "8.0.0",
+		"@angular/common": "8.0.0",
+		"@angular/compiler": "8.0.0",
+		"@angular/core": "8.0.0",
+		"@angular/forms": "8.0.0",
+		"@angular/http": "8.0.0-beta.10",
+		"@angular/platform-browser": "8.0.0",
+		"@angular/router": "8.0.0",
 		"moment": "^2.17.1",
-		"nativescript-angular": "~4.2.0",
-		"nativescript-iqkeyboardmanager": "^1.3.0",
-		"nativescript-print-zebra": "./plugins/nativescript-print-zebra-1.2.0.tgz",
+		"nativescript-angular": "8.0.2",
+		"nativescript-print-zebra": "./plugins/nativescript-print-zebra-1.3.0.tgz",
 		"nativescript-theme-core": "~1.0.2",
 		"reflect-metadata": "~0.1.8",
-		"rxjs": "~5.4.2",
-		"tns-core-modules": "~3.1.0",
-		"zone.js": "~0.8.2"
+		"rxjs": "6.3.3",
+		"tns-core-modules": "6.0.1",
+		"zone.js": "0.9.1",
+		"@angular/platform-browser-dynamic": "8.0.0"
 	},
 	"devDependencies": {
 		"babel-traverse": "6.21.0",
 		"babel-types": "6.21.0",
 		"babylon": "6.14.1",
 		"lazy": "1.0.11",
-		"nativescript-dev-typescript": "^0.5.0",
-		"tns-platform-declarations": "^3.1.0",
-		"typescript": "^2.4.2"
+		"tns-platform-declarations": "6.0.1",
+		"typescript": "3.4.5",
+		"nativescript-dev-webpack": "1.0.1",
+		"@angular/compiler-cli": "8.0.0",
+		"@ngtools/webpack": "8.0.0"
 	}
 }
